public class BankAccount {

    public double balence;

    public BankAccount() {

    }
}
