import java.awt.*;

public class Car {

    private Color color;

    public Car(Color newColor) {
        this.color = newColor;
    }

    public Color getColor() {
        return color;
    }

    public void setColor(Color color) {
        this.color = color;
    }
}
