@startuml

title __MODULE's Class Diagram__\n

  namespace  {
    class BankAccount {
    }
  }
  

  namespace  {
    class Book {
    }
  }
  

  namespace  {
    class Car {
    }
  }
  

  namespace  {
    class Dessert {
    }
  }
  

  namespace  {
    class Dog {
    }
  }
  

  namespace  {
    class Food {
    }
  }
  

  namespace  {
    enum FreshType {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    class Module {
    }
  }
  

  namespace  {
    class MyMaths {
    }
  }
  

  namespace  {
    class Person {
    }
  }
  

  namespace  {
    class Pet {
    }
  }
  

  namespace  {
    class Student {
    }
  }
  

  Dessert o-- Dessert.DietType : diet
  Food o-- FreshType : freshness


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
